 24. Players can now rush thier crafting, as per the new expertise, w/o learning it
 25. New Generic ability type: GenWrightSkill - for making large construction skills
 26. ShipWright, Caravan Building, and Clan Caravan Building now have editable recipes
 27. Prop_NoCraftability can now be applies to recipes, and has a zappermask.
 28. Caravan Building now has a full complete recipe set.

# Build 5.9.12 Release 1/17/2022
  *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
  1. Prop_Have/WearAdjuster supports item sets now
  2. MANACOST and MANAMINCOST entries in coffeemud.ini allows more flexible skill costs
  3. Skill use will now attempt to check range before consuming mana/resources
  4. New locale types: undergroundcitystreet and underwatercitystreet
  5. New command: abilities
  6. Default MINMANACOST is now skill level or 10, whichever is greater.
  7. Many crafting skills now support FROM syntax to specify specific resources.
  8. Metacraft will select random resource by weight.  New value filter for metacraft in Random Generator.
  9. All achievements now support PLAYERMASK, even if it makes no sense.
 10. Lots of new achievements -- mostly skill proficiency related
 11. Prop_InstantDeath can now kill you less instantly.
 12. STARTMANA, STARTMOVE, and STARTHP in ini file can append to class changes/level.
 13. New INI entry: BONUSACT -- for global action bonus tweeking
 14. Crafting skill INFO command now supports expertises and specific resources
 15. CLASSSYSTEM has new class limit boundary options, and new GAIN and SWITCH for train cost.
 16. New achievement flag: REMORT, for forcing remorting players to re-acquire player achievements.
 17. Alchemy now supports powders/dusts
 18. New prayer: sense chants
 19. Weaponsmith/Fletching/leatherworking now supports min/max range data
 20. New achievement type GROUPKILL
 21. Socials now support flags.  Initial flags for confirming, target confirming.