@@ -530,11 +530,13 @@ See also: CHANNELS, SOCIALS
 
 CHANNELS=\
 Command : CHANNELS\n\r\
-Usage   : CHANNELS\n\r\
+Usage   : CHANNELS (ON/OFF)\n\r\
 Example : channels\n\r\
+Example : channels off\n\r\
 Short(s): \n\r\
-List all the available channels, along with their status.  Do HELP GOSSIP for \
-more information on how to use Channels.
+List all the available channels, along with their status, or turn \
+all channels on/off at once using arguments. \
+Do HELP GOSSIP for more information on how to use Channels.
 
 CHANTS=\
 Command : CHANTS\n\r\
@@ -2077,7 +2079,8 @@ Usage   : QUIET (ON/OFF)\n\r\
 Example : quiet\n\r\
 Example : quiet off\n\r\
 Short(s): \n\r\
-Turns off all global channels, such as GOSSIP, GRATZ, and others. \
+Turns off all global channels, such as GOSSIP, GRATZ, and others, as \
+well as preventing any other player from sending you private TELL messages. \
 To turn them back on, you may issue the GOSSIP, GRATZ command again, \
 or reissue the QUIET command to turn them all back on.
 
